# draft

./: .gitignore  Cargo.toml  Containerfile  README.md  coverage.sh
.github/workflows/: coverage.yml
draft-client/: Cargo.toml
draft-client/src/: client.rs
draft-core/: Cargo.toml  README.md
draft-core/src/: config.rs  errors.rs  lib.rs  network.rs  node.rs  rpc.rs  storage.rs  utils.rs
draft-core/src/rpc/: append_entries.rs  append_entries_response.rs  mod.rs  request_vote.rs  request_vote_response.rs  utils.rs
draft-mini-redis/: Cargo.toml  README.md
draft-mini-redis/examples/: hello_world.rs  pub.rs  sub.rs
draft-mini-redis/src/: blocking_client.rs  buffer.rs  client.rs  connection.rs  db.rs  lib.rs  server.rs  shutdown.rs
draft-mini-redis/src/cmd/: get.rs  mod.rs  ping.rs  publish.rs  set.rs  subscribe.rs  unknown.rs
draft-mini-redis/tests/: buffer.rs  client.rs  server.rs
draft-server/: Cargo.toml  README.md
draft-server/src/: lib.rs  logging.rs  main.rs  network.rs  runtime.rs  timer.rs  utils.rs
draft-state-machine/: Cargo.toml
draft-state-machine/src/: lib.rs  redis.rs  state_machine.rs
infra-tests/: Dockerfile  README.md  podman-compose.yml  sshd_config
infra-tests/supervisor/: Dockerfile  entrypoint.sh  main.py  requirements.txt
infra-tests/supervisor/supervisor/: graph.py
infra-tests/supervisor/tasks/: __init__.py
sample_configs/: config-1.toml  config-2.toml  config-3.toml
