[package]
name = "draft-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
bytes = "1.2.1"
serde = { version = "1.0.145", features = ["serde_derive"] }
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full", "tracing"] }
draft-state-machine = { version = "0.1.0", features = ["draft-mini-redis"], path = "../draft-state-machine", optional = true }
color-eyre = "0.6.2"
