[package]
name = "draft-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
tracing-honeycomb = "0.4.3"
serde = { version = "^1", features = ["derive"]}
hashbrown = { version = "*", features = ["serde"]}
derive_builder = { version = "0.11.2" }
rmp-serde = { version = "1.1.0" }
anyhow = { version = "1.0.61" }
tracing = { version = "*" }
tracing-subscriber = { version = "*" }
