[package]
name = "draft-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
hashbrown = { version = "*", features = ["serde"]}
async-trait = { version = "0.1.57"}
bytes = { version = "1.2.1", features = ["serde"] }

# Builder pattern.
derive_builder = { version = "0.11.2" }

# Serializing support.
rmp-serde = { version = "1.1.0" }
serde = { version = "^1", features = ["derive"]}

# Custom error and tracing.
# anyhow = { version = "1.0.61" }
color-eyre = "0.6.2"
tracing = { version = "*" }
thiserror = { version = "1.0.32" }
derivative = "2.2.0"
itertools = "0.10.3"
serde_json = "1.0.85"
rand = "0.8.5"
toml = "0.5.9"
tokio = { version = "*", features = ["sync"] }
tracing-subscriber = "0.3.15"
