[package]
authors = ["Aalekh Patel <aalekh.gwpeck.7998@icloud.com>", "Carl Lerche <me@carllerche.com>"]
edition = "2018"
name = "draft-mini-redis"
version = "0.1.0"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/draft-mini-redis/0.1.0/draft-mini-redis/"
repository = "https://github.com/aalekhpatel07/draft"
description = """
An adaptation of the real mini-redis example implementation to be used as a state machine under Raft.
"""

[[bin]]
name = "mini-redis-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "mini-redis-server"
path = "src/bin/server.rs"

[dependencies]
async-stream = "0.3.0"
atoi = "0.3.2"
bytes = "1"
rand = "0.8.5"
clap = { version = "3.1.18", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1.34"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
# Implements the types defined in the OTel spec
opentelemetry = { version = "0.17.0", optional = true }
# Integration between the tracing crate and the opentelemetry crate
tracing-opentelemetry = { version = "0.17.2", optional = true }
# Provides a "propagator" to pass along an XrayId across services
opentelemetry-aws = { version = "0.5.0", optional = true }
# Allows you to send data to the OTel collector
opentelemetry-otlp = { version = "0.10.0", optional = true }

[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1", features = ["test-util"] }

[features]
otel = ["dep:opentelemetry", "dep:tracing-opentelemetry", "dep:opentelemetry-aws", "dep:opentelemetry-otlp"]
default = ["flush"]
flush = []