[package]
name = "draft-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
hyper = "0.14.20"
draft-core =  { version = "0.1.0", path = "../draft-core" }
tokio = { version = "1.20.1", features = ["full"] }
anyhow = { version = "*" }
rmp-serde = { version = "*" }
serde = { version = "*", features = ["derive"] }

tracing = { version = "*" }
tracing-subscriber = { version = "*" }
hashbrown = "0.12.3"
async-trait = "0.1.57"
rand = "0.8.5"
serde_json = "1.0.85"
futures = "0.3.24"
structopt = "0.3.26"