[package]
name = "draft-state-machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["redis"]
redis = []

[dependencies]
bytes = "1.2.1"
hashbrown = "0.12.3"
serde = { version = "1.0.145", features = ["serde_derive"] }
serde_json = "1.0.85"
thiserror = "1.0.36"
