[package]
name = "draft-state-machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["draft-mini-redis"]
draft-mini-redis = ["dep:draft-mini-redis", "dep:tokio"]
flush = []

[dependencies]
bytes = "1.2.1"
hashbrown = "0.12.3"
serde = { version = "1.0.145", features = ["serde_derive"] }
serde_json = "1.0.85"
thiserror = "1.0.36"
atoi = "0.3.2"
color-eyre = "0.6.2"
tracing = "0.1.36"
tokio = { version = "*", features = ["full"], optional = true }
draft-mini-redis = { version = "0.1.0", optional = true, path = "../draft-mini-redis", default-features = false, features = [] }
async-trait = { version = "*" }